fixed long title overflow for events

--- a/static-loc/events/css/events.css
+++ b/static-loc/events/css/events.css
@@ -5,3 +5,9 @@
     border-radius: 20px;
     padding: 10px;
 }
+
+.event-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
